force-app/main/default/objects/Produto__c/Produto__c.object-meta.xml
<CustomObject>
    <label>Produto</label>
    <nameField>
        <label>Nome do Produto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Produtos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>