force-app/main/default/objects/Produto__c/fields/Estoque_Atual__c.field-meta.xml
<CustomField>
    <fullName>Estoque_Atual__c</fullName>
    <label>Estoque Atual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>