force-app/main/default/objects/Produto__c/fields/Quantidade_Em_Estoque__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Em_Estoque__c</fullName>
    <label>Quantidade em estoque</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>