force-app/main/default/objects/Produto__c/fields/Quantidade_Minima__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Minima__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Define a quantidade mínima em estoque para este produto.</description>
    <label>Quantidade Mínima</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>